Update dependencies versions